fixed section titles not aligning

--- a/styles.css
+++ b/styles.css
@@ -68,8 +68,7 @@ section {
 
 .news-section-title {
     display: flex;
-    align-items: end;
-    justify-content: space-between;
+    position: relative;
     padding: 20px 0px;
 }
 
@@ -82,6 +81,9 @@ section {
 
 .news-section-arrow {
     height: 50px;
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
 }
 
 .news-cards {
@@ -195,7 +197,7 @@ section {
     display: none;
 }
 
-a:hover{
+a:hover {
     text-shadow: 1px 1px 10px #434343;
 }
 
@@ -238,16 +240,21 @@ a:hover{
     }
 
     .scroll-control {
-        align-self: flex-start;
+        position: absolute;
+        top: 0;
+        left: 0;
         display: flex;
         flex-direction: column;
         gap: 10px;
         font-style: italic;
     }
 
+    .news-section-title {
+        justify-content: center;
+    }
+
     .news-section-title h1 {
         font-size: 5rem;
-        position: relative;
         transform: translateX(-25%);
     }
 
@@ -284,13 +291,12 @@ a:hover{
     }
 
     .publication-section-title {
-        align-self: center;
-        position: relative;
-        transform: translateX(-25%);
+        justify-content: center;
     }
 
     .publication-section-title h2 {
         font-size: 3rem;
+        transform: translateX(-25%);
     }
 
     .publication-cards {
@@ -299,8 +305,8 @@ a:hover{
 }
 
 @media screen and (min-width: 992px) {
-    
-    section{
+
+    section {
         max-width: 1000px;
         margin: auto;
     }
